--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -34,7 +34,7 @@
         font-size: 14px;
         font-weight: 300;
         text-align: center;
-        span {
+        a {
             color: $main-color;
         }
     }
