--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -10,7 +10,7 @@
         margin-bottom: 75px;
         line-height: 30px;
     }
-    &__icons {
+    &__item {
         display: flex;
         justify-content: space-around;
     }
@@ -22,7 +22,7 @@
             margin-bottom: 40px;
         }
     }
-    &__text {
+    &__subtitle {
         color: $second-color;
         font-size: 18px;
         font-weight: 700;
