--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,6 @@
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
 @import 'blocks/advantages.scss';
+@import 'blocks/titles.scss';
+@import 'blocks/consultation.scss';
+@import 'blocks/forms.scss';
