--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -2,17 +2,10 @@
     min-height: 475px;
     padding: 75px 0 85px 0;
     background-color: #f6f6f6;
-    &__header {
-        color: $second-color;
-        font-size: 30px;
-        font-weight: 500;
-        text-align: center;
-        margin-bottom: 75px;
-        line-height: 30px;
-    }
     &__item {
         display: flex;
         justify-content: space-around;
+        margin-top: 75px;
     }
     &__icon {
         width: 245px;
