--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,10 +7,10 @@
     margin: 0 auto;
 }
 @import 'blocks/promo';
-@import 'blocks/header.scss';
+@import 'blocks/header';
 @import 'blocks/buttons';
-@import 'blocks/advantages.scss';
-@import 'blocks/titles.scss';
-@import 'blocks/consultation.scss';
-@import 'blocks/forms.scss';
-@import 'blocks/carousel.scss';
+@import 'blocks/advantages';
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
