--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -38,13 +38,20 @@
     }
     &__content {
         margin-top: 60px;
+        display: none;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
     &-item {
         width: 300px;
         min-height: 440px;
         border: 2px solid #e8e8e8;
         padding: 20px 20px 26px 20px;
-        // overflow: hidden;
+        overflow: hidden;
+        margin-bottom: 20px;
         &__img {
             max-width: 100%;
             height: 200px;
@@ -73,6 +80,7 @@
             color: $main-color;
             text-align: center;
             display: block;
+            text-transform: uppercase;
             &:hover {
                 color: $main-color;
             }
@@ -141,6 +149,21 @@
                     top: 7px;
                     background-color: $main-color;
                 }
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color: $main-color;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: uppercase;
+            &:hover {
+                color: $main-color;
             }
         }
     }
